--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,14 @@ layout: compress
 <html lang="en" class="no-js">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKPPNRGMW5"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CQV9FG62JY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-LKPPNRGMW5');
+      gtag('config', 'G-CQV9FG62JY');
     </script>
-      
     {% include head.html %}
     {% include head/custom.html %}
 
